feat: Add clubId to EnrichedTeamDTO and update TeamService to include clubId in team retrieval feat: Enhance AppStatusDTO and AppStatusUpdateDTO with imageUrl and lastUpdate fields feat: Add commons-lang3 dependency for utility functions